--- a/Client/Pages/Auth/Register.cshtml
+++ b/Client/Pages/Auth/Register.cshtml
@@ -22,6 +22,12 @@
                     </div> *@
 
                     <div class="form-floating mb-3">
+                        <input asp-for="RegModel.FullName" class="form-control  input-style" aria-required="true" placeholder="your_name" />
+                        <label asp-for="RegModel.FullName" class="form-label">Your name</label>
+                        <span asp-validation-for="RegModel.FullName" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-floating mb-3">
                         <input asp-for="RegModel.Email" class="form-control  input-style" aria-required="true" placeholder="name@example.com" />
                         <label asp-for="RegModel.Email" class="form-label">Email</label>
                         <span asp-validation-for="RegModel.Email" class="text-danger"></span>
