--- a/Client/Pages/Store/Details.cshtml
+++ b/Client/Pages/Store/Details.cshtml
@@ -27,8 +27,8 @@
 
             <h4 class="fw-bold"> $ @Model.Product.Price </h4>
 
-            <button class="btn btn-dark w-100 my-2">Купить за @Model.Product.Price ₽</button>
-            <button class="btn btn-outline-dark w-100">Добавить оформление</button>
+            <button class="btn btn-dark w-100 my-2 rounded-0">Купить за @Model.Product.Price ₽</button>
+            <button class="btn btn-outline-dark w-100 rounded-0">Добавить оформление</button>
 
             <p class="mt-3"><strong>Художник:</strong> Художник</p>
         </div>
