--- a/Client/Pages/Shared/_LoginPartial.cshtml
+++ b/Client/Pages/Shared/_LoginPartial.cshtml
@@ -25,7 +25,7 @@
                 <a class="nav-link text-dark header  my-link" asp-page="/Cart/UserCart">Корзина</a>
             </li>
             <li class="nav-item header">
-                <a class="nav-link text-dark header  my-link" asp-page="/Orders/Index">Заказы</a>
+                <a class="nav-link text-dark header  my-link" asp-page="/Order/UserOrders">Заказы</a>
             </li>
         }
 
