--- a/Client/Pages/Auth/Login.cshtml
+++ b/Client/Pages/Auth/Login.cshtml
@@ -6,10 +6,10 @@
 
 <div class="container text-center ">
     <div class="row main-page-div align-items-center">
-        <div class="col">
+        <div class="col-3">
         </div>
 
-        <div class="col-10 ">
+        <div class="col-6 ">
 
             <h1 class="h1">@ViewData["Title"]</h1>
 
@@ -19,17 +19,17 @@
                         <hr />
                         <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
                         <div class="form-floating mb-3">
-                            <input asp-for="LogModel.Email" class="form-control  input-style" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                            <input asp-for="LogModel.Email" class="form-control rounded-0" autocomplete="username" aria-required="true" placeholder="name@example.com" />
                             <label asp-for="LogModel.Email" class="form-label">Email</label>
                             <span asp-validation-for="LogModel.Email" class="text-danger"></span>
                         </div>
                         <div class="form-floating mb-3">
-                            <input asp-for="LogModel.Password" class="form-control  input-style" autocomplete="current-password" aria-required="true" placeholder="password" />
+                            <input asp-for="LogModel.Password" class="form-control rounded-0" autocomplete="current-password" aria-required="true" placeholder="password" />
                             <label asp-for="LogModel.Password" class="form-label">Password</label>
                             <span asp-validation-for="LogModel.Password" class="text-danger"></span>
                         </div>                        
                         <div class="mb-3">
-                            <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary my-btn">Войти</button>
+                            <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-dark rounded-0">Войти</button>
                         </div>
                         <div>
                             <p>
@@ -48,7 +48,7 @@
 
         </div>
 
-        <div class="col">
+        <div class="col-3">
         </div>
     </div>
 </div>
