--- a/Client/wwwroot/css/site.css
+++ b/Client/wwwroot/css/site.css
@@ -30,6 +30,9 @@ body {
   text-align: start;
 }
 
+
+
+
 /* блок с картинкой */
 .img-container {
     max-height: 500px;
@@ -44,3 +47,31 @@ body {
         width: auto;
         object-fit: contain; /* Вписывает изображение в контейнер, не обрезая */
     }
+
+
+.form-control:focus {
+    border-color: black !important; /* Цвет границы */
+    box-shadow: 0 0 5px black !important; /* Цвет свечения */
+}
+
+a.body {
+    color: black !important; /* Изменение цвета текста ссылки */
+}
+
+    a.body:hover {
+        color: gray !important; /* Изменение цвета при наведении */
+    }
+
+.clickable-row {
+    cursor: pointer !important;
+    transition: background-color 0.3s ease !important;
+}
+
+    .clickable-row:hover td {
+        background-color: #f8f9fa !important; /* Светло-серый фон */
+    }
+
+.table tbody tr td {
+    vertical-align: middle !important;
+    text-align: center;
+}
