--- a/Client/Pages/Shared/_LoginPartial.cshtml
+++ b/Client/Pages/Shared/_LoginPartial.cshtml
@@ -16,7 +16,7 @@
         @if (roles.Contains("Admin"))
         {
               <li class="nav-item">
-                <a class="nav-link" asp-page="/Admin/Dashboard">Админ-панель</a>
+                <a class="nav-link" asp-page="/Admin/Statistics/Statistic">Админка</a>
             </li>
         }
         else if (roles.Contains("User"))
