--- a/Client/Pages/Admin/Orders/Pending.cshtml
+++ b/Client/Pages/Admin/Orders/Pending.cshtml
@@ -8,36 +8,34 @@
 
 <div class="container text-center">
     <div class="row justify-content-center">
-        <div class="col-12 col-md-10">    
-            
-            @if(Model.OrderModels == null || !Model.OrderModels.Any()){
+        <div class="col-12 col-md-10">
+
+            @if (Model.OrderModels == null || !Model.OrderModels.Any())
+            {
                 <h2 class="text-center">Заказов не найдено</h2>
             }
-            else{
+            else
+            {
                 @foreach (var order in Model.OrderModels)
                 {
                     <div class="card my-3 rounded-0 mt-5 shadow ">
                         <div class="card-header order-table">
-                            <table class="table table-borderless m-0 w-100">
-                                <thead>
-                                    <tr>
-                                        <th class="body">Order ID</th>
-                                        <th class="body">User</th>
-                                        <th class="body">Date</th>
-                                        <th class="body">Status</th>
-                                        <th class="body">Total Amount</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td class="body">@order.Id</td>
-                                        <td class="body">@order.UserName (@order.UserEmail)</td>
-                                        <td class="body">@order.OrderedDate.ToString("g")</td>
-                                        <td class="body">@order.Status</td>
-                                        <td class="body">@order.TotalAmount</td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                            <div class="d-flex justify-content-between flex-wrap">
+                                <!-- Левая колонка -->
+                                <div class="p-2 w-50">
+                                    <div><strong>Order ID:</strong> @order.Id</div>
+                                    <div><strong>User:</strong> @order.UserName (@order.UserEmail)</div>
+                                    <div><strong>Address:</strong> @order.DeliveryAddress</div>
+                                    <div><strong>Phone:</strong> @order.PhoneNumber</div>
+                                </div>
+
+                                <!-- Правая колонка -->
+                                <div class="p-2 w-50">
+                                    <div><strong>Date:</strong> @order.OrderedDate.ToString("g")</div>
+                                    <div><strong>Total Amount:</strong> @order.TotalAmount</div>
+                                    <div><strong>Status:</strong> @order.Status</div>
+                                </div>
+                            </div>
                         </div>
                         <div class="card-body">
                             @foreach (var item in order.ItemModels)
@@ -68,20 +66,20 @@
                             }
                         </div>
                         <div class="card-footer d-flex justify-content-around">
-                            <a asp-page="/Admin/Orders/Edit" 
-                            asp-route-orderId="@order.Id"
+                            <a asp-page="/Admin/Orders/Edit"
+                               asp-route-orderId="@order.Id"
                                asp-route-returnUrl="@Url.ActionContext.HttpContext.Request.Path"
-                               class="btn mx-1 btn-outline-dark rounded-0" 
+                               class="btn mx-1 btn-outline-dark rounded-0"
                                style="width: 50%;">Edit</a>
 
-                            <a asp-page="/Admin/Orders/Delete" 
-                            asp-route-id="@order.Id"
-                               class="btn btn-dark mx-1 rounded-0" 
+                            <a asp-page="/Admin/Orders/Delete"
+                               asp-route-id="@order.Id"
+                               class="btn btn-dark mx-1 rounded-0"
                                style="width: 50%;">Delete</a>
                         </div>
                     </div>
                 }
-            }           
+            }
         </div>
     </div>
 </div>
