--- a/Client/Pages/Admin/Products/AddProduct.cshtml
+++ b/Client/Pages/Admin/Products/AddProduct.cshtml
@@ -5,4 +5,102 @@
     ViewData["ActivePage"] = "AddProduct";
 }
 
-<h1>Add Product</h1>
+<div class="container text-center">
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-10">
+
+            <div class=" card my-3 rounded-0 mt-5 shadow">
+
+                <div class="card-body">
+                    <div class="card mb-2 rounded-0">
+                        <form method="post" enctype="multipart/form-data">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="m-3">
+                                        <label asp-for="Product.Name" class="form-label"></label>
+                                        <input asp-for="Product.Name" class="form-control rounded-0 text-center" />
+                                        <span asp-validation-for="Product.Name" class="text-danger"></span>
+                                    </div>
+
+                                    <div class="m-3">
+                                        <label asp-for="Product.Description" class="form-label"></label>
+                                        <textarea asp-for="Product.Description" class="form-control rounded-0"></textarea>
+                                    </div>
+
+                                    <div class="m-3">
+                                        <label asp-for="Product.Price" class="form-label"></label>
+                                        <input asp-for="Product.Price" class="form-control rounded-0 text-center" />
+                                    </div>
+
+                                    <div class="m-3">
+                                        <label asp-for="Product.StockQuantity" class="form-label"></label>
+                                        <input asp-for="Product.StockQuantity" class="form-control rounded-0 text-center" />
+                                    </div>
+
+                                    <div class="m-3">
+                                        <label asp-for="Product.Reserve" class="form-label"></label>
+                                        <input asp-for="Product.Reserve" class="form-control rounded-0 text-center" />
+                                    </div>
+
+                                    <div class="m-3">
+                                        <label asp-for="ImageFile" class="form-label">Upload Image</label>
+                                        <input asp-for="ImageFile" type="file" name="ImageFile" class="form-control rounded-0 text-center" />
+                                    </div>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <div class="m-3">
+                                        <label asp-for="Product.Technique" class="form-label"></label>
+                                        <input asp-for="Product.Technique" class="form-control rounded-0 text-center" />
+                                    </div>
+
+                                    <div class="m-3">
+                                        <label asp-for="Product.Material" class="form-label"></label>
+                                        <input asp-for="Product.Material" class="form-control rounded-0 text-center" />
+                                    </div>
+
+                                    <div class="m-3">
+                                        <label asp-for="Product.Plot" class="form-label"></label>
+                                        <input asp-for="Product.Plot" class="form-control rounded-0 text-center" />
+                                    </div>
+
+                                    <div class="m-3">
+                                        <label asp-for="Product.Style" class="form-label"></label>
+                                        <input asp-for="Product.Style" class="form-control rounded-0 text-center" />
+                                    </div>
+
+                                    <div class="m-3">
+                                        <label asp-for="Product.Year" class="form-label"></label>
+                                        <input asp-for="Product.Year" class="form-control rounded-0 text-center" />
+                                    </div>
+
+                                    <div class="m-3">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label asp-for="Product.Wight" class="form-label"></label>
+                                                <input asp-for="Product.Wight" class="form-control rounded-0 text-center" />
+                                            </div>
+                                            <div class="col-md-6">
+                                                <label asp-for="Product.Height" class="form-label"></label>
+                                                <input asp-for="Product.Height" class="form-control rounded-0 text-center" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="card-footer d-flex justify-content-around w-100">
+                                <button type="submit" class="btn mx-1 btn-outline-dark rounded-0" style="width: 50%;">Save</button>
+                                <a asp-page="/Admin/Products/AddProduct" class="btn mx-1 btn-dark rounded-0" style="width: 50%;">Cancel</a>
+                            </div>
+
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+
+
+        </div>
+    </div>
+</div>
